--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+      <script>
+          document.addEventListener('DOMContentLoaded', () => {
+              document.body.classList.remove('preloader')
+          })
+      </script>
   </head>
-  <body>
+  <body class="preloader">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
