--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-      <script>
-          document.addEventListener('DOMContentLoaded', () => {
-              document.body.classList.remove('preloader')
-          })
-      </script>
   </head>
   <body class="preloader">
     <noscript>
@@ -18,5 +13,10 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+        window.onload = function () {
+            document.body.classList.remove('preloader')
+        }
+    </script>
   </body>
 </html>
